<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6636BC"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/digite_sua_altura_em_cm_ex_182"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/cintura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cintura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:hint="@string/digite_sua_cintura_em_cm_ex_87"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/digite_eu_peso_ex_96"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/altura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/genero"
        android:layout_width="218dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888">


        <RadioButton
            android:id="@+id/mulher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mulher" />

        <RadioButton
            android:id="@+id/homem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homem" />

    </RadioGroup>


    <Button
        android:id="@+id/calcularIc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="#FF9800"
        android:text="@string/calcular_Ic"
        app:backgroundTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cintura" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="202dp"
        android:layout_height="113dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>